@@ -28,6 +28,7 @@ qtcreator (2.7.0-1) UNRELEASED; urgency=low
   * Remove unused patch posix_rt_nonlinux.diff.
   * Make every package that ships a binary managed by qtchooser depend on it.
   * Build the documentation using qmake. Taken from Ubuntu.
+  * Override dh_install to pass --fail-missing.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 22 May 2013 15:40:28 -0300
 
